vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/app-root: /admin
  name: vaultwarden
  namespace: vaultwarden
spec:
  rules:
    - host: vaultwarden.int.kyledev.co
      http:
        paths:
          - backend:
              service:
                name: homelab-vaultwarden-web
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - vaultwarden.int.kyledev.co
      secretName: wildcard-kyledev-tls-prod
